--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -15,8 +15,8 @@
     </div>
     <div>
         <a href="/rango/about/">About</a> <br />
-		<img src="{% static "images/ordinaries.png" %}"
-			alt="Normies REE" /> <!-- New line -->
+		<img src="{% static "images/rango.jpg" %}"
+			alt="Picture of Rango" /> <!-- New line -->
 </div>
 </body>
 </html>
