--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,8 +11,7 @@
     <h1>Rango says...</h1>
     <div>
         here is the about page. <br />
-		made by Dominykas Jakstonis <br />
-        <strong>{{ boldmessage }}</strong> <br />
+		This tutorial has been put together by Dominykas Jakstonis <br />
     </div>
     <div>
         <a href="/rango/">Index</a> <br />
