--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,7 +11,7 @@
     <h1>Rango says...</h1>
     <div>
         here is the about page. <br />
-		This tutorial has been put together by Dominykas Jakstonis <br />
+		<div> This tutorial has been put together by Dominykas Jakstonis </div> <br />
     </div>
     <div>
         <a href="/rango/">Index</a> <br />
