--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -22,6 +22,7 @@
     {% endif %}
 
     </div>
+    <div><a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/></div>
     <div><a href="/rango/">Index</a> <br /></div>
 
 </body>
