--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
+{% block title_block %}
+Index
+{% endblock %}
+{% block body_block %}
     <h1>Rango says...</h1>
     <div>hey there partner!</div>
 
@@ -18,7 +14,7 @@
 
     <ul>
         {% for category in categories %}
-            <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
+            <li><a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
         {% endfor %}
     </ul>
     {% else %}
@@ -41,11 +37,5 @@
     {% endif %}
     </div>
 
-    <div>
-        <a href="/rango/about/">About</a> <br />
-        <a href="/rango/add_category/">Add a New Category</a><br />
-		<img src="{% static "images/rango.jpg" %}"
-			alt="Picture of Rango" />
-</div>
-</body>
-</html>
+    <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+{% endblock %}
