--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+{% block title_block %}
+    Add Page
+{% endblock %}
+{% block body_block %}
+<div>
 {% if category %}
 <h1>Add a Page to {{ category.name }}</h1>
 <div>
@@ -28,5 +28,5 @@
 
 </div>
 
-</body>
-</html>
+</div>
+{% endblock %}
