--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
-    <div>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
+{% block body_block %}
     {% if category %}
         <h1>{{ category.name }}</h1>
         {% if pages %}
@@ -17,13 +15,8 @@
         {% else %}
             <strong>No pages currently in category.</strong>
         {% endif %}
+        <a href="{% url 'add_page' category.slug %}">Add a Page</a>
     {% else %}
         The specified category does not exist!
     {% endif %}
-
-    </div>
-    <div><a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/></div>
-    <div><a href="/rango/">Index</a> <br /></div>
-
-</body>
-</html>
+{% endblock %}
