--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -4,8 +4,11 @@
 Index
 {% endblock %}
 {% block body_block %}
-    <h1>Rango says...</h1>
-    <div>hey there partner!</div>
+    {% if user.is_authenticated %}
+        howdy {{ user.username }}!
+    {% else %}
+        hey there partner!
+    {% endif %}
 
     <div>
     {% if categories %}
