--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,6 +8,7 @@ About
     <div>
         here is the about page. <br />
 		<div> This tutorial has been put together by Dominykas Jakstonis </div> <br />
+        <p>visits: {{ visits }}</p>
     </div>
     <div>
         <a href="/rango/">Index</a> <br />
