--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,6 +11,7 @@ Index
     {% endif %}
 
     <div>
+    <p>visits: {{ visits }}</p>
     {% if categories %}
 
     <h2>Most Liked Categories</h2>
