--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -13,6 +13,9 @@
         <br />
         Password: <input type="password" name="password" value="" size="50" />
         <br />
-        <input type="submit" value="submit" />
+        {{ user_form.as_p }}
+        {{ profile_form.as_p }}
+        <input type="submit" name="submit" value="Register" />
     </form>
+    {% endif %}
 {% endblock %}
